code quality update